# todo-harvest

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DONE.md  IGNORED.md  LICENSE  PLAN.md  README.md  REVIEW.md  config.example.yaml  harvest  harvest.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  todo
.github/workflows/: ci.yml
src/: __main__.py  config.py  exporter.py  local_state.py  main.py  mapping.py  normalizer.py  schema.py
src/sources/: __init__.py  _http.py  jira.py  msftodo.py  mstodo.py  notion.py  plane.py  vikunja.py
tests/: conftest.py  test_config.py  test_exporter.py  test_http.py  test_jira.py  test_local_state.py  test_main.py  test_mapping.py  test_msftodo.py  test_mstodo.py  test_normalizer.py  test_notion.py  test_plane.py  test_registry.py  test_vikunja.py
tests/fixtures/: jira_issues.json  msftodo_tasks.json  mstodo_lists.json  mstodo_tasks.json  notion_database.json  notion_pages.json  plane_issues.json  plane_labels.json  plane_projects.json  plane_states.json  vikunja_projects.json  vikunja_tasks.json
