[project]
name = "todo-harvest"
version = "0.1.0"
description = "Sync TODO items between Vikunja, Jira, Microsoft To Do, Notion, and Plane"
requires-python = ">= 3.10"
dependencies = [
    "httpx>=0.27",
    "PyYAML>=6.0",
    "msal>=1.28",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src"]
omit = ["src/__main__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "if TYPE_CHECKING:",
    "pragma: no cover",
]
