[project]
name = "todo-harvest"
version = "0.1.0"
description = "Sync TODO items between Vikunja, Jira, Microsoft To Do, Notion, and Plane"
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "MIT" }
authors = [
    { name = "mmdemirbas" },
]
keywords = ["todo", "sync", "vikunja", "jira", "mstodo", "notion", "plane", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27",
    "PyYAML>=6.0",
    "msal>=1.28",
    "rich>=13.7",
]

[project.urls]
Homepage = "https://github.com/mmdemirbas/todo-harvest"
Repository = "https://github.com/mmdemirbas/todo-harvest"
Issues = "https://github.com/mmdemirbas/todo-harvest/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src"]
omit = ["src/__main__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "if TYPE_CHECKING:",
    "pragma: no cover",
]
